# Local_CorEx_Demo

./: README.md  STREAMLIT_APP_README.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_requirements.txt
experiments/ablation_study/: README.md  run_ablation_study.py  synthetic_data.py
experiments/misc/: README.md
experiments/paper_bikes/: README.md  bikes.ipynb
experiments/paper_crime/: README.md  crime.ipynb
experiments/paper_mnist/: delete_node_experiment.ipynb  nn_plotting.py  nn_utils.py
experiments/paper_mnist/mnist_classifier/: config.py  data.py  train_autoencoder.py  train_classifier.py
local-corex-repo/: README.md  pyproject.toml  setup.py
local-corex-repo/src/local_corex/: __init__.py  _transformers.py  biocorex.py  linearcorex.py  partition.py  plotting_utils.py
local-corex-repo/src/local_corex/base/: __init__.py  _base.py  bio.py  linear.py
local-corex-repo/src/local_corex/utils/: __init__.py  data.py  plotting.py
paper_mnist/: README.md  delete_node_experiment.ipynb  mnist_20_indexes.pkl  mnist_analysis.ipynb  nn_plotting.py  nn_utils.py  resnet_experiment.ipynb
paper_mnist/mnist_classifier/: model.py  tensorboard.ipynb
paper_mnist/mnist_classifier/model/: autoencoder_config.py  config.py
paper_mnist/mnist_classifier/model/ae_bs_128_lr_2em3_hs_300_1/version_0/: events.out.tfevents.1770138727.stat-gpu01.byu.edu.1026127.0  events.out.tfevents.1770139404.stat-gpu01.byu.edu.1026127.1
paper_mnist/mnist_classifier/model/bs_128_lr_5em4_3_do_0_bn_T_1/version_0/: events.out.tfevents.1769788059.stat-gpu01.byu.edu.1071190.0  events.out.tfevents.1769788597.stat-gpu01.byu.edu.1071190.1
