[project]
name = "local-corex-experiments"
version = "0.1.0"
description = "Experiment notebooks and scripts that depend on the local-corex package"
requires-python = ">=3.9"
dependencies = [
    "local-corex==0.1.0",
    "jupyter",
    "matplotlib",
    "pandas",
    "numpy",
    "scikit-learn",
]
